--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "jison": "^0.4.17"
   },
   "scripts": {
-    "prepublish": "npm run build && del-cli dist/__tests__",
+    "prepublishOnly": "npm run build && del-cli dist/__tests__",
     "build": "del-cli dist && cross-env BABEL_ENV=publish babel src --out-dir dist && jison parser.jison -o dist/lib/parser.js",
     "pretest": "eslint src && npm run build",
     "test": "ava dist/__tests__/"
