--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
   },
   "dependencies": {
     "css-color-converter": "^1.0.2",
-    "css-unit-converter": "^1.0.0",
-    "postcss": "^8.3.6"
+    "css-unit-converter": "^1.0.0"
   },
   "devDependencies": {
     "ava": "^0.18.2",
@@ -38,7 +37,11 @@
     "eslint-config-i-am-meticulous": "^6.0.1",
     "eslint-plugin-babel": "^4.0.0",
     "eslint-plugin-import": "^2.2.0",
-    "jison": "^0.4.17"
+    "jison": "^0.4.17",
+    "postcss": "^8.3.6"
+  },
+  "peerDependencies": {
+    "postcss": "^8.3.6"
   },
   "scripts": {
     "prepublish": "npm run build && del-cli dist/__tests__",
