--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "postcss": "^8.3.6"
   },
   "peerDependencies": {
-    "postcss": "^8.3.6"
+    "postcss": ">= 8"
   },
   "scripts": {
     "prepublish": "npm run build && del-cli dist/__tests__",
